nginx-ingress/keycloak-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      nginx.ingress.kubernetes.io/backend-protocol: HTTPS
      nginx.ingress.kubernetes.io/ssl-redirect: "true"
      nginx.ingress.kubernetes.io/use-regex: "true"
    name: keycloak-ingress
    namespace: argocd
  spec:
    ingressClassName: nginx
    rules:
    - host: keycloak.stefan-albu.com
      http:
        paths:
        - backend:
            service:
              name: keycloak-server
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - keycloak.stefan-albu.com
      secretName: keycloak-tls-secret
